# context-based-question-answering

./: Dockerfile  README.md  pyproject.toml  requirements.txt
src/: main.py  question_answer.py
src/context_based_question_answering.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
