[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "context-based-question-answering" 
version = "1.0"
dependencies = [
    "torch >= 2.2.0",
    "transformers >= 4.37.2",
    "streamlit >= 1.31.1"
]
requires-python = ">3.8"
authors = [
    {name = "Denys Menfredy", email = "denys.menfredy7@gmail.com"}
]
description = "Question Answering Using HF PreTrained model"
keywords = ["machine-learning", "python", "huggingface", "pytorch", "streamlit", "nlp"]

[tool.hatch.build.targets.wheel]
packages = ["src"]
